XMLExper/m12/m12_478_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1714:63: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLUnknown*’ (conversion casts away constness)
 1714 |         return /*PCI*/dynamic_cast<tinyxml2::XMLUnknown*>(node)->Value();
      |                                                               ^
diff: tinyxml2.S: No such file or directory
